#include macros.make

#PACKAGE		= netcdf

#add_subdirectory(cxx)
#add_subdirectory(f90)
#add_subdirectory(fortran)
add_subdirectory(libsrc)
#add_subdirectory(man)
#add_subdirectory(ncdump)
#add_subdirectory(ncgen)
#add_subdirectory(nctest)
#add_subdirectory(nc_test)
#add_subdirectory(nf_test)

#include rules.make
