dnl
dnl Process this file with GNU autoconf(1) to produce a configure script.
dnl

dnl Defaults:
CPPFLAGS=${CPPFLAGS--DNDEBUG}
CFLAGS=${CFLAGS--O}
FPPFLAGS=${FPPFLAGS-}
FFLAGS=${FFLAGS-}

AC_INIT(libsrc/ncconfig.in)
UD_SRCDIR
AC_PREFIX_DEFAULT(`(cd ..; pwd)`)
AC_CONFIG_HEADER(
    libsrc/ncconfig.h:libsrc/ncconfig.in
)
UD_CONFIG_HEADER(
    fortran/nfconfig.inc:fortran/nfconfig.in
)
dnl AC_DEFINE(_ANSI_C_SOURCE)
dnl AC_DEFINE(_POSIX_SOURCE)
dnl AC_DEFINE(_XOPEN_SOURCE)
UD_PROG_M4
UD_PROG_CC
UD_PROG_CC_MAKEDEPEND
UD_PROG_CXX
UD_PROG_FC
UD_PROG_F90
UD_FORTRAN_TYPES
UD_CHECK_LIB_MATH
UD_PROG_AR()
UD_PROG_NM()
AC_PROG_RANLIB
AC_CHECK_HEADER(stdlib.h, ,AC_DEFINE(NO_STDLIB_H))
AC_CHECK_HEADER(sys/types.h, ,AC_DEFINE(NO_SYS_TYPES_H))
AC_CHECK_FUNC(strerror, ,AC_DEFINE(NO_STRERROR))
UD_CHECK_FTRUNCATE
AC_FUNC_ALLOCA
AC_STRUCT_ST_BLKSIZE
UD_CHECK_IEEE
AC_TYPE_SIZE_T
AC_TYPE_OFF_T
AC_CHECK_TYPE(ssize_t, int)
AC_CHECK_TYPE(ptrdiff_t, int)
AC_CHECK_TYPE(uchar, unsigned char)
AC_C_CHAR_UNSIGNED
AC_C_BIGENDIAN
AC_CHECK_SIZEOF(short)
AC_CHECK_SIZEOF(int)
AC_CHECK_SIZEOF(long)
AC_CHECK_SIZEOF(float)
AC_CHECK_SIZEOF(double)
UD_CHECK_SIZEOF(off_t)
UD_CHECK_SIZEOF(size_t)
UD_MAKEWHATIS
UD_FTPBINDIR
UD_OUTPUT(macros.make)
